--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Josvel PERO SI ME VAN A CONTRATAR?</h1>
-    <img src="{{ url_for('static', filename='OIP.jpeg') }}" alt="gato llorando" style="width: 300px; height: auto;">
+    <img src="https://img7.thuthuatphanmem.vn/uploads/2023/08/19/meme-meo-buon-khoc-cute_102656646.jpg" alt="gato llorando" style="width: 300px; height: auto;">
     <p>¿Por qué no me han contactado? 😢</p>
     
     <style>
