--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>Josvel PERO SI ME VAN A CONTRATAR?</h1>
     <img src="https://img7.thuthuatphanmem.vn/uploads/2023/08/19/meme-meo-buon-khoc-cute_102656646.jpg" alt="gato llorando" style="width: 300px; height: auto;">
     <p>¿Por qué no me han contactado? 😢</p>
+    <a href="/landing">
+        <button>LANDING</button>
+    </a>
     
     <style>
         body {
@@ -26,6 +29,7 @@
             font-size: 1.2em;
             margin-top: 20px;
         }   
+
     </style>
 </body>
 </html> 
